envoy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  selector:
    app: envoy
  ports:
    - name: http
      port: 8080
      targetPort: 8080
